--- a/Rules/All-Env.yaml
+++ b/Rules/All-Env.yaml
@@ -16,7 +16,7 @@ dependencies:
   - snakemake
   - pysam
   - sniffles=2.0
-  - pandas
+  - pandas=1.5.3
   - bowtie2
   - matplotlib
   - matplotlib-venn
