--- a/config-SV-JIM.yaml
+++ b/config-SV-JIM.yaml
@@ -4,16 +4,18 @@
 
 #Reference Sequence Information
 refSampleName: "TAIR10" # Short ID for user to distinguish files
-refAssembly: "../Arabidopsis_Data/TAIR10.1.all.fna" # Path to Reference Fenome fasta file
-refSeqsFile: "../Arabidopsis_Data/RefSeqsToInclude.txt" # File of REF regions to include (one per line. Ex. Chromosomes only). Can be created with grep "><Chrom_Prefix>" <targetGenome> | tr -d ">"
+refAssembly: "../../Arabidopsis_Data/TAIR10.1.all.fna" # Path to Reference Fenome fasta file
+refFileExtension: "fna"
+refSeqsFile: "../../Arabidopsis_Data/RefSeqsToInclude.txt" # File of REF regions to include (one per line. Ex. Chromosomes only). Can be created with grep "><Chrom_Prefix>" <targetGenome> | tr -d ">"
 
 #Query Sequence Information
 qrySampleName: "Ler" # Long ID for user to distinguish files
-qryAssembly: "../Arabidopsis_Data/Ler.chr.all.v2.0.fasta" # Path to Query Assembly's fasta file
-qrySeqsFile: "../Arabidopsis_Data/RefSeqsToInclude.txt" # File of regions to include (one per line. Ex: Chrosomes only). Can be created with grep "><CHROM_PREFIX>" <targetGenome> | tr -d ">"
+qryAssembly: "../../Arabidopsis_Data/Ler.chr.all.v2.0.fasta" # Path to Query Assembly's fasta file
+qryFileExtension: "fasta"
+qrySeqsFile: "../../Arabidopsis_Data/RefSeqsToInclude.txt" # File of regions to include (one per line. Ex: Chrosomes only). Can be created with grep "><CHROM_PREFIX>" <targetGenome> | tr -d ">"
 
 #Read Input Information
-readFilesList: "../Arabidopsis_Data/ReadAccessions.txt"
+readFilesList: "../../Arabidopsis_Data/ReadAccessions.txt"
 lastLRAccession: "ERR3415826" # Accession number for the last file in the contents of the file named in readFilesList (to check if requiring download from SRA)
 
 
@@ -26,7 +28,7 @@ threads: 50
 
 #Designated Working Directory Information (Defaults can be built using 'build-workspace.sh' provided in home directory of repo)
 genomesFolder: "Workflow_Outputs/Genomes"
-longReadsFolder: "../Arabidopsis_Data" #"Workflow_Outputs/Long_Reads"
+longReadsFolder: "../../Arabidopsis_Data" #"Workflow_Outputs/Long_Reads"
 qualimapReportsFolder: "Workflow_Outputs/Qualimap_Reports"
 alignResultsFolder: "Workflow_Outputs/Alignments"
 svResultsFolder: "Workflow_Outputs/SV_Calls"
